if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
	message(STATUS "app-Demo-SLProject: configuring Android")
    set(IDE_FOLDER "Android")
    add_subdirectory(android/app)
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	message(STATUS "app-Demo-SLProject: configuring iOS")
	add_subdirectory(iOS-cmake)
else()
	message(STATUS "app-Demo-SLProject: configuring glfw")
    add_subdirectory(GLFW)
endif()
