if("${CMAKE_SYSTEM_NAME}" MATCHES "Android")
	message(STATUS "app-Demo-SLProject: configuring Android")
    set(IDE_FOLDER "Android")
    add_subdirectory(android/app)
elseif("${CMAKE_SYSTEM_NAME}" MATCHES "iOS")
	message(STATUS "app-Demo-SLProject: configuring iOS")
	add_subdirectory(iOS-cmake)
else()
	message(STATUS "app-Demo-SLProject: configuring glfw")
    add_subdirectory(GLFW)
endif()
